--- a/templates/landing/about.html
+++ b/templates/landing/about.html
@@ -139,7 +139,7 @@
 	</section>
 	<!-- veido area end-->
 
-	<!--Team start-->
+	{% comment %} <!--Team start-->
 	<section id="team-member">
 		<div class="team-heading text-center">
 			<h2>Meet the Team</h2>
@@ -232,7 +232,7 @@
 			
 		</div>
 	</section>
-	<!--Team end-->
+	<!--Team end--> {% endcomment %}
 	<!--About-info start-->
 	<section id="about-info-l">
 		<div class="about-cor-top">
