--- a/templates/landing/contact.html
+++ b/templates/landing/contact.html
@@ -12,9 +12,9 @@
 						<div class="content-banner-area">
 							<h1>Contact</h1>
 							<h6>
-								<a href="{% url 'landing_page' %}">Home</a>
+								<a href="{% url 'landing_page' %}" title="Agapeer Homepage">Home</a>
 								<i class="fas fa-angle-right"></i>
-								<a href="#!">Contact</a>
+								<a href="{% url 'contact_page' %}" title="Contact Us">Contact</a>
 							</h6>
 						</div>
 					</div>
