--- a/templates/partials/seo_tags.html
+++ b/templates/partials/seo_tags.html
@@ -11,16 +11,16 @@
 <meta name="revisit-after" content="1 day">
 <meta name="author" content="Agapeer">
 {% if title %}<title>{{title}} - Agapeer</title>{% else %}<title>Authentication- Agapeer</title>{% endif %}
-<meta name="image" content="https://www.dropbox.com/s/89g2uwq78ej2vjf/We%27re%20All%20Human.png?dl=0">
+<meta name="image" content="https://i.imgur.com/URJBlFt.png">
 <meta itemprop="name" content="Agapeer">
 <meta itemprop="description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
-<meta itemprop="image" content="https://www.dropbox.com/s/89g2uwq78ej2vjf/We%27re%20All%20Human.png?dl=0">
+<meta itemprop="image" content="https://i.imgur.com/URJBlFt.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Agapeer">
 <meta name="twitter:description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
 <meta name="og:title" content="Agapeer">
 <meta name="og:description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
-<meta name="og:image" content="https://www.dropbox.com/s/89g2uwq78ej2vjf/We%27re%20All%20Human.png?dl=0">
+<meta name="og:image" content="https://i.imgur.com/URJBlFt.png">
 <meta name="og:url" content="https://agapeer.me/">
 <meta name="og:site_name" content="Agapeer">
 <meta name="og:type" content="website">
