--- a/templates/partials/landing_navbar.html
+++ b/templates/partials/landing_navbar.html
@@ -12,30 +12,30 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if page == 'landing' %}active{% endif %}" href="{% url 'landing_page' %}">Home</a>
+                        <a class="nav-link {% if page == 'landing' %}active{% endif %}" href="{% url 'landing_page' %}" title="Agapeer Homepage">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link {% if page == 'forum' %}active{% endif %}" href="{% url 'spirit:index' %}">Forum</a>
+                        <a class="nav-link {% if page == 'forum' %}active{% endif %}" href="{% url 'spirit:index' %}" title="Agapeer forum">Forum</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link {% if page == 'about' %}active{% endif %}" href="{% url 'about_page' %}">About</a>
+                        <a class="nav-link {% if page == 'about' %}active{% endif %}" href="{% url 'about_page' %}" title="About us">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="{% url 'contact_page' %}">Contact</a>
+                        <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="{% url 'contact_page' %}" title="Contact us">Contact</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                        <a class="nav-link" href="{% url 'dashboard' %}" title="Agapeer dashboard">Dashboard</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                        <a class="nav-link" href="{% url 'account_login' %}" title="Agapeer login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+                        <a class="nav-link" href="{% url 'account_signup' %}" title="Agapeer register">Register</a>
                     </li>
                     {% endif %}
                 </ul>
